# AutoCoder

./: CMakeLists.txt  OsdWindow.cpp  OsdWindow.h  TypingEngine.cpp  TypingEngine.h  app.manifest  main.cpp
